const mongoose = require("mongoose");

const garbageTypeSchema = new mongoose.Schema(
  {
    name: { type: String, required: true },
    image: { type: String, required: true },
  },
  { timestamps: true }
);

module.exports = mongoose.model("GarbageType", garbageTypeSchema);
